@@ -1,17 +1,17 @@
 
+//import cafe.adriel.voyager.navigator.Navigator
+//import cafe.adriel.voyager.transitions.SlideTransition
 import androidx.compose.foundation.layout.fillMaxSize
 import androidx.compose.material.Surface
 import androidx.compose.runtime.Composable
 import androidx.compose.runtime.CompositionLocalProvider
 import androidx.compose.ui.Modifier
-import cafe.adriel.voyager.navigator.Navigator
-import cafe.adriel.voyager.transitions.SlideTransition
 import org.jetbrains.compose.ui.tooling.preview.Preview
-import presentation.screens.tutorial.home.HomeScreen
 import presentation.style.DarkThemeCompositionLocal
 import presentation.style.MainTheme
 import presentation.style.dimIfDarkMode
 import presentation.style.isDark
+import tutorial.TutorialNavigation
 
 @Composable
 @Preview
@@ -20,9 +20,7 @@ fun App() {
         MainTheme {
             Surface(modifier = Modifier.fillMaxSize().dimIfDarkMode()) {
                 //Navigation() //Non-voyager nav from Navigation.kt
-                Navigator(HomeScreen()){
-                    SlideTransition(it)
-                }
+                TutorialNavigation() //Temp navigation function to transition from voyager library to androidx.navigation
             }
         }
     }
