@@ -1,0 +1,14 @@
+package libs.mvvm
+
+import androidx.compose.runtime.Composable
+import androidx.lifecycle.ViewModel
+import androidx.lifecycle.viewmodel.compose.viewModel
+import org.koin.compose.currentKoinScope
+
+@Composable
+inline fun <reified T : ViewModel> getViewModel(): T {
+    val scope = currentKoinScope()
+    return viewModel {
+        scope.get<T>()
+    }
+}
