@@ -1,16 +1,16 @@
 package presentation.screens.tutorial.home
 
+//import kotlinx.coroutines.delay
 import androidx.compose.runtime.MutableState
 import androidx.compose.runtime.mutableStateOf
-import cafe.adriel.voyager.core.model.ScreenModel
-import cafe.adriel.voyager.core.model.screenModelScope
+import androidx.lifecycle.ViewModel
+import androidx.lifecycle.viewModelScope
 import data.tutorial.MongoDB
 import domain.tutorial.RequestState
 import domain.tutorial.TaskAction
 import domain.tutorial.ToDoTask
 import kotlinx.coroutines.Dispatchers
 import kotlinx.coroutines.IO
-//import kotlinx.coroutines.delay
 import kotlinx.coroutines.flow.collectLatest
 import kotlinx.coroutines.launch
 
@@ -18,7 +18,7 @@ import kotlinx.coroutines.launch
 typealias MutableTasks = MutableState<RequestState<List<ToDoTask>>>
 typealias Tasks = MutableState<RequestState<List<ToDoTask>>>
 
-class HomeViewModel(private val mongoDB: MongoDB): ScreenModel {
+class HomeViewModel(private val mongoDB: MongoDB): ViewModel() {
     private var _activeTasks: MutableTasks = mutableStateOf(RequestState.Idle)
     val activeTasks: Tasks = _activeTasks
 
@@ -28,13 +28,13 @@ class HomeViewModel(private val mongoDB: MongoDB): ScreenModel {
     init {
         _activeTasks.value = RequestState.Loading
         _completedTasks.value = RequestState.Loading
-        screenModelScope.launch(Dispatchers.Main) {
+        viewModelScope.launch(Dispatchers.Main) {
 //            delay(500) //artificial delay to see Loading screen.
             mongoDB.readActiveTasks().collectLatest {
                 _activeTasks.value = it
             }
         }
-        screenModelScope.launch (Dispatchers.Main){
+        viewModelScope.launch (Dispatchers.Main){
 //            delay(500) //artificial delay to see Loading screen.
             mongoDB.readCompletedTasks().collectLatest {
                 _completedTasks.value = it
@@ -61,19 +61,19 @@ class HomeViewModel(private val mongoDB: MongoDB): ScreenModel {
     }
 
     private fun setCompleted(task: ToDoTask, completed: Boolean) {
-        screenModelScope.launch(Dispatchers.IO) {
+        viewModelScope.launch(Dispatchers.IO) {
             mongoDB.setCompleted(task, completed)
         }
     }
 
     private fun setFavourite(task: ToDoTask, isFavourite: Boolean) {
-        screenModelScope.launch(Dispatchers.IO) {
+        viewModelScope.launch(Dispatchers.IO) {
             mongoDB.setFavourite(task, isFavourite)
         }
     }
 
     private fun deleteTask(task: ToDoTask) {
-        screenModelScope.launch(Dispatchers.IO) {
+        viewModelScope.launch(Dispatchers.IO) {
             mongoDB.deleteTask(task)
         }
     }
