@@ -21,21 +21,22 @@ import androidx.compose.runtime.setValue
 import androidx.compose.ui.Modifier
 import androidx.compose.ui.text.TextStyle
 import androidx.compose.ui.unit.dp
-import cafe.adriel.voyager.core.screen.Screen
-import cafe.adriel.voyager.koin.getScreenModel
-import cafe.adriel.voyager.navigator.LocalNavigator
-import cafe.adriel.voyager.navigator.currentOrThrow
+//import cafe.adriel.voyager.core.screen.Screen
+//import cafe.adriel.voyager.koin.getScreenModel
+//import cafe.adriel.voyager.navigator.LocalNavigator
+//import cafe.adriel.voyager.navigator.currentOrThrow
 import domain.tutorial.TaskAction
 import domain.tutorial.ToDoTask
+import libs.mvvm.getViewModel
 
 const val DEFAULT_TITLE = "Enter the Title"
 const val DEFAULT_DESCRIPTION = "Add some description"
 
-data class TaskScreen(val task: ToDoTask? = null) : Screen {
+data class TaskScreen(val task: ToDoTask? = null) {
     @Composable
-    override fun Content(){
-        val navigator = LocalNavigator.currentOrThrow
-        val viewModel = getScreenModel<TaskViewModel>()
+    fun Content(){
+//        val navigator = LocalNavigator.currentOrThrow
+        val viewModel = getViewModel<TaskViewModel>()
         var currentTitle by remember{
             mutableStateOf(task?.title ?: DEFAULT_TITLE)
         }
@@ -58,7 +59,10 @@ data class TaskScreen(val task: ToDoTask? = null) : Screen {
                         )
                     },
                     navigationIcon = {
-                        IconButton(onClick = { navigator.pop() }){
+                        IconButton(
+//                            onClick = { navigator.pop() }
+                            onClick = {}
+                        ){
                             Icon(
                                 imageVector = Icons.AutoMirrored.Default.ArrowBack,
                                 contentDescription = "Back Arrow"
@@ -91,7 +95,7 @@ data class TaskScreen(val task: ToDoTask? = null) : Screen {
                                     )
                                 )
                             }
-                            navigator.pop()
+//                            navigator.pop()
                         },
                         shape = RoundedCornerShape(size = 12.dp)
                     ){
