@@ -1,7 +1,9 @@
 package presentation.screens.tutorial.task
 
-import cafe.adriel.voyager.core.model.ScreenModel
-import cafe.adriel.voyager.core.model.screenModelScope
+import androidx.lifecycle.ViewModel
+import androidx.lifecycle.viewModelScope
+//import cafe.adriel.voyager.core.model.ScreenModel
+//import cafe.adriel.voyager.core.model.screenModelScope
 import data.tutorial.MongoDB
 import domain.tutorial.TaskAction
 import domain.tutorial.ToDoTask
@@ -11,7 +13,7 @@ import kotlinx.coroutines.launch
 
 class TaskViewModel(
     private val mongoDB: MongoDB
-): ScreenModel {
+): ViewModel() {
 
     fun setAction(action: TaskAction){
         when (action) {
@@ -28,13 +30,13 @@ class TaskViewModel(
     }
 
     private fun addTask(task: ToDoTask){
-        screenModelScope.launch(Dispatchers.IO){
+        viewModelScope.launch(Dispatchers.IO){
             mongoDB.addTask(task)
         }
     }
 
     private fun updateTask(task: ToDoTask){
-        screenModelScope.launch(Dispatchers.IO){
+        viewModelScope.launch(Dispatchers.IO){
             mongoDB.updateTask(task)
         }
     }
