@@ -6,6 +6,7 @@ They use this navigation framework - https://voyager.adriel.cafe/
 Let's use it to follow along, then remove it and rely on standard androidx.navigation.
 
 -Remove voyager library in favour of regular navigation framework
+See: https://github.com/joelkanyi/FocusBloom/issues/141
 
 Video on Voyager used by tutorial:
 https://www.youtube.com/watch?v=7Xv38k4cCMc
