@@ -2,6 +2,10 @@ This is just to motivate myself to improve a little bit every day :)
 
 Best: 32
 
+08-04-2025
+Streak: 2
+    - Start refactoring and removing Voyager Navigation dependency
+
 07-04-2025
 Streak: 1
     - Following Tutorial: Make FAB visible when opening keyboard, prevent crash when adding task
